--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -25,11 +25,11 @@
    "outputs": [],
    "source": [
     "# Authentication from twitter api -> https://developer.twitter.com/\n",
-    "# Create a app and get your keys\n",
-    "consumerKey = 'Y3qbEvNnl1kJ5QufR69kprCN4'\n",
-    "consumerSecret = 'uBwR6j5rdRvPBL03UnSi0V13RlKXRVd1SaJ5oJURdQSJsrqGGR'\n",
-    "accessToken = '3344461197-GTVIAeKj4DSNJRI2I24a2hvVBg0ajlZM9YVkJrE'\n",
-    "accessTokenSecret = 'Tke7S6JZZcV2tqpuUrYbs6dY2rFPIYlQmia7L0JfaNoUn'\n",
+    "# Create an app and get your keys, then insert bellow:\n",
+    "consumerKey = 'xxxxxxxxx'\n",
+    "consumerSecret = 'xxxxxxxxx'\n",
+    "accessToken = 'xxxxxxxxx'\n",
+    "accessTokenSecret = 'xxxxxxxxxxxxxx'\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumerKey, consumerSecret)\n",
     "auth.set_access_token(accessToken, accessTokenSecret)\n",
